<resources>
    <string name="app_name">DHack</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signup">Sign Up</string>
    <string name="username">username</string>
    <string name="required">*Required</string>
    <string name="email">Email</string>
    <string name="password">password</string>
    <string name="cont">Login</string>
    <string name="login_with_google">Login With Google</string>
    <string name="signup_with_google">Sign up With Google</string>
    <string name="or">or</string>
    <string name="txtLogin">Already have an account?</string>
    <string name="toLogin">Sign in</string>
    <string name="login">Login</string>
    <string name="txtSignup">Don\'t have an account yet?</string>
    <string name="toSignup">Sign up</string>
    <string name="txtForgotPass">Forgot your password?</string>
    <string name="forgotPass">Reset Password</string>
    <string name="confirm_password">Confirm new password</string>
    <string name="new_password">New password</string>
    <string name="reset">Known your password?</string>
    <string name="txtReset">Enter a new password to reset the password on \n your account. We\'ll ask this password whenever \n you login.</string>
    <string name="register">Register</string>
    <string name="home">Home</string>
    <string name="schedule">Schedule</string>
    <string name="cart">Cart</string>
    <string name="profile">Profile</string>
    <string name="hello">Hello there</string>
    <string name="name">username</string>
    <string name="deals">Best Deals</string>
    <string name="popular">Popular Products</string>
    <string name="accessories">Accessories</string>
    <string name="services">Services</string>
    <string name="batteries">Batteries</string>
    <string name="brakes">Brakes</string>
    <string name="suspension">Suspension</string>
    <string name="wipers">Wipers</string>
    <string name="oil">Oil Services</string>
    <string name="tyres">Tyres</string>
    <string name="price">5000</string>
    <string name="scotch_premium">Scotch Premium</string>
    <string name="battery">Battery</string>
    <string name="brand">Brand Name</string>
    <string name="description">Description</string>
    <string name="item">Product Name</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="admin">Admin Dashboard</string>
    <string name="tyresS"><![CDATA[Tyres & Tyres Services]]></string>
    <string name="others"><![CDATA[Products & Services]]></string>
    <string name="appointment">Book Appointment</string>
    <string name="service">Service</string>
    <string name="branch">Branch</string>
    <string name="firstName">First Name</string>
    <string name="phone">Phone</string>
    <string name="carMake">Car Make</string>
    <string name="carReg">Car Reg</string>
    <string name="carModel">Car Model</string>
    <string name="book">Book Appointment</string>
    <string name="brakesApp">Brakes Appointment</string>
    <string name="oilApp">Oil Service Appointment</string>
    <string name="othersApp">Products Appointment</string>
    <string name="suspensionApp">Suspension Appointment</string>
    <string name="tyresApp">Tyres Appointment</string>
    <string name="batteryApp">Battery Appointment</string>
    <string name="time">Time</string>
    <string name="text">TextView</string>
    <string name="_600">Ksh 6000</string>
    <string name="txtDesc">Description</string>
    <string name="my_cart">My Cart</string>
    <string name="check_out">Check out</string>
    <string name="empty">Your Cart is empty</string>
    <string name="total">Total</string>
    <string name="_150">Ksh 150</string>
    <string name="_chair">Battery</string>
    <string name="_50">Ksh 500</string>
    <string name="_1">1</string>
    <string name="date">Date</string>
    <string name="settings">Settings</string>
    <string name="edit_personal_details">Personal details</string>
    <string name="logout">Log out</string>
    <string name="version_1_0">version 1.0</string>
    <string name="notifications">Notifications</string>
    <string name="all_orders_">All Orders</string>
    <string name="track_orders">Track Orders</string>
    <string name="billing_">Billing</string>
    <string name="appointments">All Appointments</string>
    <string name="details">Details</string>
    <string name="my_account">My Account</string>
    <string name="_email">email</string>
    <string name="forgot_change_password">Forgot/change password</string>
    <string name="_save">Save</string>
    <string name="payment">Check Out</string>
    <string name="code">Business code ie Till No.</string>
    <string name="amount">Ksh 500</string>
    <string name="pay">Pay with Mpesa</string>
    <string name="ksh_500">Ksh 500</string>
    <string name="amountT">Total Amount :</string>
    <string name="billing">Billing</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="payText">Auto Express allows only Mpesa transactions for goods and services purchased.\n</string>
    <string name="_total">Total</string>
    <string name="place_order">Verify Purchase</string>
    <string name="chair_">Brakes</string>
    <string name="phoneConfirm">Enter your phone number to authenticate the payment of your product(s).</string>
    <string name="confirmPayment">Proceed to pay for your products by clicking the Confirm and pay Button.\n</string>
    <string name="data">Sensor Readings</string>
    <string name="co">Carbon Monoxide</string>
    <string name="ethyl">Ethyl Alcohol</string>
    <string name="no">Nitrogen Dioxide</string>
    <string name="voc">Volatile Organic Compounds</string>
    <string name="map">View Map</string>
    <string name="reading">Condition :</string>
</resources>